<resources>
    <string name="app_name">VTC Canteen Food Ordering</string>
    <string name="app_setting">Setting</string>
    <string name="menu_cart">Shopping Cart</string>
    <string name="click_to_enter">Click to Enter</string>
    <string name="ordering">Make Order</string>
    <string name="my_order">My Order</string>
    <string name="setting_developer_mode">Developer Mode</string>
    <string name="setting_txt_url">Server Url</string>
    <string name="loading">Loading</string>
    <string name="price_tag">Price: $</string>
    <string name="remain_tag">Remain: </string>
    <string name="subtotal_tag">Subtotal: $</string>
    <string name="total_tag">Total: $</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="default_notification_channel_id">food_order_app</string>
    <string name="quantity">Quantity: </string>
    <string name="order_confirm">Order Confirm</string>
    <string name="tag_order_id">Order ID: </string>
    <string name="remove">Remove</string>
</resources>
