<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:padding="2dp"
    app:cardCornerRadius="6dp"
    app:cardElevation="6dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivImgPath"
            android:layout_width="300dp"
            android:layout_height="300dp" />

        <TextView
            android:id="@+id/tvItemName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvItemCat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="end"
                android:text="@string/remain_tag" />

            <TextView
                android:id="@+id/tvRemain"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="start" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="end"
                android:text="@string/price_tag" />

            <TextView
                android:id="@+id/tvPrice"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="start" />
        </LinearLayout>

        <Button
            android:id="@+id/btnAddToCart"
            android:layout_width="120dp"
            android:layout_height="35dp"
            android:layout_gravity="end"
            android:background="@color/colorPrimaryDark"
            android:text="@string/add_to_cart"
            android:textColor="@color/colorPrimary" />
    </LinearLayout>
</androidx.cardview.widget.CardView>